# NextBrain

./: Prompt.md  README.md  __init__.py  config.py  config.yaml.example  input.md  pyproject.toml  requirements.txt
agents/: deep_researcher.py  editor.py  ideator.py  scout.py  skeptic.py  writer.py
eval/: gates.py
nextbrain/: __init__.py  __main__.py  cli.py  config.py  digest.py  models.py  prune.py  report.py  stats.py  workspace.py
nextbrain/ingest/: __init__.py  digest_parser.py  filter.py  mail_client.py
nextbrain/scholar/: classifier.py  context_retriever.py  figure_extractor.py  metadata.py  note_generator.py  obsidian_writer.py  url_parser.py  zotero_client.py
nextbrain/tools/: browser_daemon.py  browser_llm.py  llm.py  rag.py
nextbrain/topics/: __init__.py  active_topics.py
orchestrator/: pipeline.py  state.py
prompts/: deep_researcher.md  editor.md  ideator.md  scout.md  skeptic.md  writer.md
researchnote/: __main__.py  cli.py  config.py  models.py
researchnote/scholar/: __init__.py  classifier.py  context_retriever.py  metadata.py  note_generator.py  obsidian_writer.py  zotero_client.py
researchnote/skills/scholar/: SKILL.md
researchnote/tools/: browser_daemon.py  browser_llm.py  io.py  llm.py  rag.py  skills_loader.py
schemas/: __init__.py  bib.schema.json  hypothesis.schema.json  paper_outline.schema.json  review.schema.json
skills/deep_researcher/: SKILL.md
skills/editor/: SKILL.md
skills/experimenter/: SKILL.md
skills/ideator/: SKILL.md
skills/scout/: SKILL.md
skills/skeptic/: SKILL.md
skills/writer/: SKILL.md
tools/: citations.py  io.py  latex_builder.py  llm.py  search.py
