[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "researchnote"
version = "0.3.0"
description = "ResearchNote: paper reading notes with LLM — fetch metadata, generate structured notes, manage in Obsidian"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "arxiv>=2.1.0",
    "pyzotero>=1.5.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
rag = ["chromadb>=0.4.0", "sentence-transformers>=2.2.0"]
all = ["researchnote[browser,rag]"]
dev = ["pytest", "ruff"]

[project.scripts]
researchnote = "researchnote.cli:main"

[tool.setuptools.packages.find]
include = ["researchnote*"]

[tool.setuptools.package-data]
"researchnote.skills" = ["**/*.md"]
