[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nextbrain"
version = "0.3.0"
description = "NextBrain: AI-powered research knowledge base — ingest papers, generate notes, manage in Obsidian"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "arxiv>=2.1.0",
    "pyzotero>=1.5.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]
rag = ["chromadb>=0.4.0", "sentence-transformers>=2.2.0"]
ingest = [
    "beautifulsoup4>=4.12",
    "google-api-python-client>=2.100",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
]
all = ["nextbrain[browser,rag,ingest]"]
dev = ["pytest", "ruff"]

[project.scripts]
nextbrain = "nextbrain.cli:main"

[tool.setuptools.packages.find]
include = ["nextbrain*"]

[tool.setuptools.package-data]
"nextbrain.skills" = ["**/*.md"]
